--- a/views/week-1-fantasy-think-tank.ejs
+++ b/views/week-1-fantasy-think-tank.ejs
@@ -6,6 +6,7 @@
 				<div class="column-header">
 					<h2 class="title">FBF's Week 1 Fantasy  thinkTank</span></h2>
 					<p class="date">September 7, 2014</p>
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/thinktank/col-thinktank.jpg" alt="">
 				</div>
 				<div class="column-content-wrapper">
 
