--- a/views/fantasy-1-week-1.ejs
+++ b/views/fantasy-1-week-1.ejs
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<div class="column-header">
-					<h2 class="title">FBF's Week 1 Fantasy  thinkTank</span></h2>
+					<h2 class="title">Fantasy Week 1</span></h2>
 					<p class="date">September 7, 2014</p>
 					<img src="https://s3.amazonaws.com/footballbyfootball-dev/thinktank/col-thinktank.jpg" alt="">
 				</div>
