--- a/views/locks-of-the-week.ejs
+++ b/views/locks-of-the-week.ejs
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<div class="column-header">
-					<h2 class="title">Locks of the Week</span></h2>
+					<h2 class="title">NFL Week 1</span></h2>
 					<p class="date">September 7, 2014</p>
 					<img src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/col-locks.jpg" alt="">
 				</div>
