--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1191,6 +1191,12 @@ form {
 
 }
 
+.image-links {
+	height: 250px;
+	display: table;
+	margin: auto;
+}
+
 .pull-quote {
 	border: 5px solid red;
 	border-right: none;
