--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,43 @@
 	<%= include header %>
 	<div class="main-articles">
 		<div class="container">
+
 			<div class="row">
 				<div class="col-md-12">
 					<div class="row">
+						<div class="col-md-6">
+							<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sage.jpg);">
+								<div class="overcast"></div>
+								<div class="headline">
+									<div class="white banner left">COLUMN:</div>
+									<div class="inner-content">
+										<div class="copy"><a href="/column/slingin-from-the-pocket">
+											<h3>Slingin from the Pocket</h3>
+										</a></div>
+										<div class="byline">
+											Sage Rosenfels
+											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<a href="/locks/nfl-week-1"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/col-locks.jpg" alt=""></a>
+							<a href="/fantasy/week-1"><img class="image-links" src="https://s3.amazonaws.com/footballbyfootball-dev/thinktank/col-thinktank.jpg" alt=""></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 6, 2014</p>
+				<div class="col-md-12">
+					<div class="row">
 						<div class="col-md-12">
-							<div class="big-article really-big" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sept6.jpg);">
+							<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sept6.jpg);">
 								<div class="overcast"></div>
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
