--- a/views/lock-1-nfl-week-1.ejs
+++ b/views/lock-1-nfl-week-1.ejs
@@ -20,7 +20,7 @@
 						<h2 class=”subheader”>Sage Rosenfels:</h2>
 						<p><em>MINNESOTA over St. Louis</em>
 						<img src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/minv.jpg" alt="" style="float: left;">
-						<p>Going into Week 1 of the NFL season, every team has the guy they’ve hand-picked to be their starter for opening day.  Every team the St. Louis Rams.  That’s why I’m making the Minnesota Vikings as my lock of the week.
+						<p>Going into Week 1 of the NFL season, every team has the guy they’ve hand-picked to be their starter for opening day.  Every team except the St. Louis Rams.  That’s why I’m making the Minnesota Vikings as my lock of the week.
 						 
 						<p>Shawn Hill is one of the better backups in the league.  Some years it seems like he plays better than the high paid starters.  But he’s had little work the last couple of years and will be challenged by a revamped Zimmer-led defense.
 						 
