--- a/views/col-9-from-bad-to-badass.ejs
+++ b/views/col-9-from-bad-to-badass.ejs
@@ -11,7 +11,7 @@
 				</div>
 
 				<div class="column-content-wrapper">
-					<p>Every year, an NFL team or two comes out of nowhere and shocks the league by having a playoff season after a poor showing the previous year.  Kansas City and Carolina were the epitome of this last year.  Terrible in 2012, and in the playoffs 12 months later. Who will those teams be in 2014?  Here are four teams that I think have the best chance.
+					<p>Every year, an NFL team or two comes out of nowhere and shocks the league by having a playoff season after a poor showing the previous year.  Kansas City and Carolina were the epitome of this last year.  Terrible in 2012, and in the playoffs 12 months later. Who will those teams be in 2014?  Here are three teams that I think have the best chance.
 					 
 					<h2>Minnesota Vikings</h2>
 					 
