--- a/views/col-9-from-bad-to-badass.ejs
+++ b/views/col-9-from-bad-to-badass.ejs
@@ -14,6 +14,8 @@
 					<p>Every year, an NFL team or two comes out of nowhere and shocks the league by having a playoff season after a poor showing the previous year.  Kansas City and Carolina were the epitome of this last year.  Terrible in 2012, and in the playoffs 12 months later. Who will those teams be in 2014?  Here are three teams that I think have the best chance.
 					 
 					<h2>Minnesota Vikings</h2>
+
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/minv.jpg">
 					 
 					<p>With a 34-6 opening week blowout of the St. Louis Rams, Vikings players and fans have to feel encouraged by this year’s squad.  After winning just five games in 2013, MN fired Leslie Frazier and replaced him with Mike Zimmer, one of the most respected defensive coordinators in the league,
 					 
@@ -34,7 +36,9 @@
 					 
 					 
 					<h2>Atlanta Falcons</h2>
-					 
+					
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/atlf.jpg">
+
 					<p>Anytime you beat Drew Brees and the Saints, there is plenty of reason to have hope.  That is just what Atlanta did on Sunday.  Matt Ryan threw for 456 yards in the overtime thriller. 
 					 
 					<p><em>Why the will be good…</em>
@@ -56,6 +60,8 @@
 					 
 					 
 					<h2>Miami Dolphins</h2>
+
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/locksoftheweek/miad.jpg">
 					 
 					<p>After a disastrous public relations roller coaster last year, the Dolphins replaced major elements of their offensive staff in hopes to improve from their 8-8 record.  They shocked the Patriots (survivor league pool disruptor) in week one.
 					 
