--- a/views/col-9-from-bad-to-badass.ejs
+++ b/views/col-9-from-bad-to-badass.ejs
@@ -21,7 +21,7 @@
 					 
 					<p>Zimmer’s former players gushed about him as a coach and person.  As a former player, I think it’s always a good sign when this occurs.  Players who love their coach are more cohesive and dedicated to the team, which can lead to more wins.
 					 
-					<p><em>Why they will win...</em>
+					<p><b><em>Why they will win...</em></b>
 					 
 					<p>Zimmer was lucky enough to hire Norv Turner as the offensive coordinator.  Turner has a long track record of coaching great tailbacks and tight ends, a strength of the Vikings offense.  Ladainian Tomlinson, Emmitt Smith, Ricky Williams, and Stephen Davis all had some of the best years of their careers with Norv as the OC.  Antonio Gates walked off the basketball court and into a multiple pro-bowl tight end career under Turner’s coaching.  Should be interesting to see what he does with Adrian Peterson and Kyle Rudolph.
 					 
@@ -29,7 +29,7 @@
 					 
 					<p>Though I don’t expect the Vikings to win the division, if they get a few breaks and improve on their weaknesses from last year, they have enough talent to get back into the playoffs after only a one year absence.
 					 
-					<p><em>Why they will stay bad...</em>
+					<p><b><em>Why they will stay bad...</em></b>
 					 
 					<p>In a sport that counts so much on one position, the quarterback, the Vikings have the weakest group in the division.  Matt Cassel is an excellent fit as a game manager that has played well on good teams in the past.  But he isn’t Aaron Rodgers, Jay Cutler, or Matt Stafford.  If the Vikings expect Cassel or rookie Teddy Bridgewater to carry the team on their backs, it could be a tough season. 
 					The Vikings’ defense was 31st in the league and lost Jared Allen, their best player, to the Bears.  They are learning a new scheme—which always takes time—and play in an offensive minded division.
@@ -41,7 +41,7 @@
 
 					<p>Anytime you beat Drew Brees and the Saints, there is plenty of reason to have hope.  That is just what Atlanta did on Sunday.  Matt Ryan threw for 456 yards in the overtime thriller. 
 					 
-					<p><em>Why the will be good…</em>
+					<p><b><em>Why the will be good…</em></b>
 					 
 					<p>Matt Ryan, Julio Jones, Roddy White, Steven Jackson, Harry Douglas, and Devin Hester bring a ton of talent to the table.  In my opinion, Ryan is a top 10 quarterback in the league, and has the best receivers in the NFL.  Having Julio Jones back will be a huge help—whether it’s throwing him the ball, or opening up other aspects of the offense. 
 					 
@@ -50,7 +50,7 @@
 					<p>Matt Ryan led his team to the playoffs every year he has been in the league until last season.  He knows how to get back.  And Atlanta’s terrible 2013 wasn’t because of a lack of talent.
 					 
 					 
-					<p><em>Why they will stay bad…</em>
+					<p><b><em>Why they will stay bad…</em></b>
 					 
 					<p>The NFC South is one of the best divisions in football.  The Falcons are a Super Bowl caliber team in my opinion, yet didn’t win the division last year.  Carolina surprised everyone with 12 wins a year ago, and have one of the best defenses in the league.  They also won in Week 1 despite the absence of Cam Newton.  The Bucs started over by getting Lovie Smith, who always seems to win 10 games in Chicago.  They also snagged Josh McCown from the Bears.  Josh played like a pro-bowler last year.  They have a very talented defense.
 					 
@@ -65,7 +65,7 @@
 					 
 					<p>After a disastrous public relations roller coaster last year, the Dolphins replaced major elements of their offensive staff in hopes to improve from their 8-8 record.  They shocked the Patriots (survivor league pool disruptor) in week one.
 					 
-					<p><em>Why they will be good…</em>
+					<p><b><em>Why they will be good…</em></b>
 					 
 					<p>Despite the fiasco regarding the Incognito situation, Miami managed 8 wins despite giving up 58 sacks with Ryan Tannehill still learning the position.  Another year under their QB’s belt will be a huge help.  They also revamped their offensive line, and hired two big additions to the coaching staff.  Bill Lazor, the OC, has been around great offensive minds in his career.  He has worked for Mike Holmgren and Chip Kelly and attended an Ivy League school.  Smart guys are usually pretty good at learning from other smart guys.
 					 
@@ -75,7 +75,7 @@
 					 
 					<p>The AFC East has been the Patriots division for 14 years now and I see that trend continuing.  But the Bills and Jets have very young and inexperienced quarterbacks and didn’t make the playoffs in 2013 either.
 					 
-					<p><em>Why they will stay bad…</em>
+					<p><b><em>Why they will stay bad…</em></b>
 					 
 					<p>Tannehill hasn’t become the NFL quarterback they were hoping when they made him a first round pick three years ago.  Having played wide receiver at the start of his college career, he seems to still be learning the game and still has a ways to go. 
 					 
