--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 			<div class="row">
 				<% if (locals.column1) { %>
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(<%= column1.main_image %>);">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sage-sept8.jpg<%= column1.main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
