--- a/views/col-8-slingin-from-the-pocket.ejs
+++ b/views/col-8-slingin-from-the-pocket.ejs
@@ -13,64 +13,64 @@
 				<div class="column-content-wrapper">
 					<h1>Around the NFL with Former NFL QB Sage Rosenfels</h1>
 
-					<h2 class=”subheader”>Saints at Atlanta</h2>
+					<h2 class='subheader'>Saints at Atlanta</h2>
 					
-					<p>I’m fairly confident the Saints will be back in the playoffs and contending for the NFC crown.  Atlanta is out to prove that last year was a fluke.  Their run game stunk in 2013 and Stephen Jackson wants to show he’s still a quality back.  And oh yeah, they probably want to get Julio Jones the ball early and often.
+					<p>I’m fairly confident the Saints will be back in the playoffs and contending for the NFC crown.  Atlanta is out to prove that last year was a fluke.  Their run game stunk in 2013 and Steven Jackson wants to show he’s still a quality back.  And oh yeah, they probably want to get Julio Jones the ball early and often.
 
 
-					<h2 class=”subheader”>Vikings at Rams</h2>
+					<h2 class='subheader'>Vikings at Rams</h2>
 					
-					<p>Two below .500 teams from a year ago that is an intriguing matchup.  AP vs the best Defensive Line in the league.  Zimmer’s first game as head coach against Shawn Hill, a career backup that has generally played better than people give him credit.  
+					<p>Two below .500 teams from a year ago that is an intriguing matchup.  AP vs the best Defensive Line in the league.  Zimmer’s first game as head coach against Shaun Hill, a career backup that has generally played better than people give him credit.  
 
-					<h2 class=”subheader”>Browns at Steelers</h2>
+					<h2 class='subheader'>Browns at Steelers</h2>
 					
 					<p>A lot of eyes will be on this game to see if Brian Hoyer struggles or excels.  Manziel won’t be put in yet if Hoyer plays poorly but it could be the beginning of the “setting of the table” for his first start in a few weeks.  Steeler Nation will expect a win at home.  I’m interested to see if Big Ben’s maturation from playmaker to more of a pocket passer continues.  He’s not 25 anymore and can’t keep taking hits if he wants to play at a high level in 5 years.
 
-					<h2 class=”subheader”>Jaguars at Eagles</h2>
+					<h2 class='subheader'>Jaguars at Eagles</h2>
 					
 					<p>Chip Kelly entered the league last year and his team led the league in rushing. His young, not highly touted quarterback, threw up insane numbers.  Will this continue against the Jags?  Probably
 
-					<h2 class=”subheader”>Raiders at Jets</h2>
+					<h2 class='subheader'>Raiders at Jets</h2>
 					
 					<p>Derek Carr’s brother, David, got sacked a lot when he was a rookie in Houston.  The Raiders play the most creative blitzing team in the league.  Fool me once, shame on.......you can’t get fooled again.
 
-					<h2 class=”subheader”>Bengals at Ravens</h2>
+					<h2 class='subheader'>Bengals at Ravens</h2>
 					
-					<p>Should be one of the best games of opening day.  Two new offensive coordinators in this one, both whom I played for in my career.  Hugh Jackson will run a similar offense to Jay Gruden’s but you can bet he will want to add his own flavor to it.  Gary Kubiak takes over the Raven’s offense that struggled to run the ball last year and Flacco had one of his worst seasons.  Watch for Kubiak’s well documented zone running game with well designed play action fakes to hit the Smith “brothers” over the middle of the field.
+					<p>Should be one of the best games of opening day.  Two new offensive coordinators in this one, both whom I played for in my career.  Hue Jackson will run a similar offense to Jay Gruden’s but you can bet he will want to add his own flavor to it.  Gary Kubiak takes over the Raven’s offense that struggled to run the ball last year and Flacco had one of his worst seasons.  Watch for Kubiak’s well documented zone running game with well designed play action fakes to hit the Smith “brothers” over the middle of the field.
 
-					<h2 class=”subheader”>Bills at Bears</h2>
+					<h2 class='subheader'>Bills at Bears</h2>
 					
-					<p>Chicago paid Jay Cutler like he will bring them to knew heights.  Will he take the next step in his maturation process in year two with Marc Trestman?  Both quarterbacks played well for the Bears last year.  After the big contract extension for Cutler, they are expecting one to play great this year.
+					<p>Chicago paid Jay Cutler like he will bring them to new heights.  Will he take the next step in his maturation process in year two with Marc Trestman?  Both quarterbacks played well for the Bears last year.  After the big contract extension for Cutler, they are expecting one to play great this year.
 
-					<h2 class=”subheader”>Washington at Texans</h2>
+					<h2 class='subheader'>Washington at Texans</h2>
 					
-					<p>Two of my former teams and a game I’m fairly sure I won’t watch.  I’m interested in seeing RG3 run a more traditional pocket passer offense.  Can he do it or does he need the zone read game to succeed in the NFL?  Clowney will want to make a splash in his first start.  Oh year, and my buddy David Diehl is doing the analyst work for Fox in this one so that should be something for you fans to critic.  REAL BIG DIEHL
+					<p>Two of my former teams and a game I’m fairly sure I won’t watch.  I’m interested in seeing RG3 run a more traditional pocket passer offense.  Can he do it or does he need the zone read game to succeed in the NFL?  Clowney will want to make a splash in his first start.  Oh yeah, and my buddy David Diehl is doing the analyst work for Fox in this one so that should be something for you fans to critic.  REAL BIG DIEHL
 
-					<h2 class=”subheader”>Titans at Chiefs</h2>
+					<h2 class='subheader'>Titans at Chiefs</h2>
 					
-					<p>Handing the ball to Jamar Charles is the best way to win this matchup for Kansas City.  I’m hoping the Chiefs count on Alex Smith, who played great in their playoff loss, to carry more of the load early this year.  It would be nice to save Charles some of those 30 carry games until later in the season for K.C.
+					<p>Handing the ball to Jamal Charles is the best way to win this matchup for Kansas City.  I’m hoping the Chiefs count on Alex Smith, who played great in their playoff loss, to carry more of the load early this year.  It would be nice to save Charles some of those 30 carry games until later in the season for K.C.
 
-					<h2 class=”subheader”>Patriots at Dolphins</h2>
+					<h2 class='subheader'>Patriots at Dolphins</h2>
 					
 					<p>Gronk, Gronk, Gronk.  Stay healthy.  Catch Touchdowns.  Spike Ball.  Things Pats fans are hoping to see.  I’m going to watch Miami’s completely revamped offensive line under the tutelage of my Houston line coach John Benton.  An excellent teacher and players love playing for him.
 
-					<h2 class=”subheader”>Panthers at Bucs</h2>
+					<h2 class='subheader'>Panthers at Bucs</h2>
 					
 					<p>I assume Cam will play but I’m suspecting fewer runs and more pocket passing.  Probably a bad week to start him for you fantasy players.  Looking forward to seeing Josh McCown run the ship in Tampa.  Can he play as well in another offense or was he just a perfect fit for Marc Trestman in Chicago?  
 
-					<h2 class=”subheader”>49ers at Dallas</h2>
+					<h2 class='subheader'>49ers at Dallas</h2>
 					
 					<p>Dallas’s defense “struggled” to stop the run last year(to put it nicely).  San Fran loves to pound the rock.  Not a good combo.  We may know if it’s going to be a long year in Jerryland or if his team could compete to win the NFC East in week 1.  
 
-					<h2 class=”subheader”>Colts at Broncos</h2>
+					<h2 class='subheader'>Colts at Broncos</h2>
 					
 					<p>Has all the signs of a great game.  Maybe Peyton will say “MAQUOKETA MAQUOKETA” before he snaps the ball this year.  Change it up Peyton.  My hometown would love the publicity.  
 
-					<h2 class=”subheader”>Giants at Lions</h2>
+					<h2 class='subheader'>Giants at Lions</h2>
 					
 					<p>All eyes must be on the Giants offense.  They struggled last year and it continued in the preseason despite bringing in a new offensive coordinator.  Eli changing from Gilbride’s option route led attack to the west coast offense, where route running is very black and white.  Should be an interesting thing for me to analyze.
 
-					<h2 class=”subheader”>Chargers at Cardinals</h2>
+					<h2 class='subheader'>Chargers at Cardinals</h2>
 					
 					<p>Two of the quietly dangerous teams in the league.  Rivers played excellent during the latter half of last year.  I’m sure his swag will be at DEFCON 5 in primetime.  Arizona’s defense lost some key players from last year.  Shootout in the desert?
 
