--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -877,7 +877,8 @@ img {
 	position: relative;
 	background-size: cover;
 	background-position: center;
-
+	margin-top: 15px;
+	
 	a {
 		color: white;
 		text-decoration: none;
