--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,60 +2,44 @@
 	<div class="main-articles">
 		<div class="container">
 			<div class="row">
-				<% columns.forEach(function(column, index){ %>
-					<% if (index < 2 ) { %>
-
+				<% if (locals.column1 && locals.column2) { %>
 				<div class="col-md-6">
-					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column1.main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column.slug %>">
-									<h3><%= column.title %></h3>
+								<div class="copy"><a href="/column/<%= column1.slug %>">
+									<h3><%= column1.title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column.player.name %>
-									<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+									<%= column1.player.name %>
+									<div class="author-image" style="background-image: url(<%= column1.player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-					<% } %>
-				<% }); %>
+				<div class="col-md-6">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column2.main_image.image_url %>);">
+						<div class="overcast"></div>
+						<div class="headline">
+							<div class="white banner left">COLUMN:</div>
+							<div class="inner-content">
+								<div class="copy"><a href="/column/<%= column2.slug %>">
+									<h3><%= column2.title %></h3>
+								</a></div>
+								<div class="byline">
+									<%= column2.player.name %>
+									<div class="author-image" style="background-image: url(<%= column2.player.image_url %>)"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<% } %>
 			</div>
-
 			<div class="row">
-				<hr class="bottom">
-				<p class="date">September 8, 2014</p>
-
-				<% columns.forEach(function(column, index){ %>
-					<% if (index == 2 ) { %>
-
-				<div class="col-md-12">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
-						<div class="overcast"></div>
-						<div class="headline">
-							<div class="white banner left">COLUMN:</div>
-							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column.slug %>">
-									<h3><%= column.title %></h3>
-								</a></div>
-								<div class="byline">
-									<%= column.player.name %>
-									<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-					<% } %>
-				<% }); %>
-
-
 				<div class="col-md-6">
 					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/col-sage-sept8.jpg);">
 						<div class="overcast"></div>
