--- a/views/column-editor/edit.ejs
+++ b/views/column-editor/edit.ejs
@@ -5,7 +5,8 @@
 		title: <%- JSON.stringify(column.title) %>, 
 		data: <%- JSON.stringify(column.data) %>, 
 		mainImage: <%- JSON.stringify(column.main_image) %>, 
-		player: <%- JSON.stringify(column.player._id) %> };
+		player: <%- JSON.stringify(column.player._id) %>,
+		approved: <%- JSON.stringify(column.approved) %> };
 	window.Players = <%- JSON.stringify(players) %>;
 </script>
 
